--- a/Export_Step2_MASTER_HabitatAnalysis_to_invidual_tabs.ipynb
+++ b/Export_Step2_MASTER_HabitatAnalysis_to_invidual_tabs.ipynb
@@ -24,12 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ------------------- Output location for scripts --------------------\n",
-    "output_location = 'C:/Users/Ryan/Documents/2_Habitat_Prioritzation/Prioritization/Python_Notebooks/UCSRB_Prioritization_Python_Scripts/'"
+    "output_location = 'C:/Users/Ryan/Documents/GitHub/Prioritization_Step2_Data_Tool'\n",
+    "# output_location = 'C:/Users/Ryan/Documents/2_Habitat_Prioritzation/Prioritization/Python_Notebooks/UCSRB_Prioritization_Python_Scripts/'"
    ]
   },
   {
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
