--- a/RTT_Prioritization_Pathways_and_Actions_Script.ipynb
+++ b/RTT_Prioritization_Pathways_and_Actions_Script.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,10 +880,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ReachName</th>\n",
+       "      <th>Basin</th>\n",
+       "      <th>AssessmentUnit</th>\n",
+       "      <th>TotalNum_LS</th>\n",
+       "      <th>SpringChinookReach</th>\n",
+       "      <th>SteelheadReach</th>\n",
+       "      <th>BullTroutReach</th>\n",
+       "      <th>SPCH_Adult_Migration</th>\n",
+       "      <th>SPCH_Holding</th>\n",
+       "      <th>SPCH_Spawning</th>\n",
+       "      <th>SPCH_Fry_Colonization</th>\n",
+       "      <th>SPCH_Summer_Rearing</th>\n",
+       "      <th>SPCH_Winter_Rearing</th>\n",
+       "      <th>SPCH_Smolt_Emigration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Aeneas Creek 01</td>\n",
+       "      <td>Okanogan</td>\n",
+       "      <td>Aeneas Creek Okanogan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Aeneas Creek 02</td>\n",
+       "      <td>Okanogan</td>\n",
+       "      <td>Aeneas Creek Okanogan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Alder Creek 01</td>\n",
+       "      <td>Wenatchee</td>\n",
+       "      <td>Lower Chiwawa River</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Alder Creek 02</td>\n",
+       "      <td>Wenatchee</td>\n",
+       "      <td>Lower Chiwawa River</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Andrews Creek 01</td>\n",
+       "      <td>Methow</td>\n",
+       "      <td>Andrews Creek</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0         ReachName      Basin         AssessmentUnit  \\\n",
+       "0           0   Aeneas Creek 01   Okanogan  Aeneas Creek Okanogan   \n",
+       "1           1   Aeneas Creek 02   Okanogan  Aeneas Creek Okanogan   \n",
+       "2           2    Alder Creek 01  Wenatchee   Lower Chiwawa River    \n",
+       "3           3    Alder Creek 02  Wenatchee   Lower Chiwawa River    \n",
+       "4           4  Andrews Creek 01     Methow         Andrews Creek    \n",
+       "\n",
+       "   TotalNum_LS SpringChinookReach SteelheadReach BullTroutReach  \\\n",
+       "0            0                 no            yes             no   \n",
+       "1            0                 no            yes             no   \n",
+       "2            3                yes            yes             no   \n",
+       "3            0                 no            yes             no   \n",
+       "4            2                yes            yes            yes   \n",
+       "\n",
+       "   SPCH_Adult_Migration  SPCH_Holding  SPCH_Spawning  SPCH_Fry_Colonization  \\\n",
+       "0                     0             0              0                      0   \n",
+       "1                     0             0              0                      0   \n",
+       "2                     0             0              1                      1   \n",
+       "3                     0             0              0                      0   \n",
+       "4                     0             0              0                      0   \n",
+       "\n",
+       "   SPCH_Summer_Rearing  SPCH_Winter_Rearing  SPCH_Smolt_Emigration  \n",
+       "0                    0                    0                      0  \n",
+       "1                    0                    0                      0  \n",
+       "2                    1                    0                      0  \n",
+       "3                    0                    0                      0  \n",
+       "4                    1                    1                      0  "
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reach_life_stages_Spring_Chinook.Spring"
+   ]
   },
   {
    "cell_type": "markdown",
