Added reach life stage priority data tables in PROTECTION

--- a/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
+++ b/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
@@ -96,10 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ------------------------- Reach-level Life Stages Priority ------------------------------------\n",
+    "reach_life_stages_Spring_Chinook = pd.read_excel(updated_spreadsheet, \n",
+    "                   'Reaches Life Stage Spring Chino')\n",
+    "reach_life_stages_Steelhead = pd.read_excel(updated_spreadsheet, \n",
+    "                   'Reaches Life Stage Steelhead')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,6 +134,19 @@
    "source": [
     "output_location_x = output_location + 'life_stages_protection.xlsx'\n",
     "life_stages_protection.to_excel(output_location_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_location_x = output_location + 'reach_life_stages_Spring_Chinook.xlsx'\n",
+    "reach_life_stages_Spring_Chinook.to_excel(output_location_x)\n",
+    "\n",
+    "output_location_x = output_location + 'reach_life_stages_Steelhead.xlsx'\n",
+    "reach_life_stages_Steelhead.to_excel(output_location_x)"
    ]
   },
   {
