--- a/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
+++ b/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,10 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:/Users/Ryan/Documents/GitHub/Prioritization_Step2_Data_Tool/Protection/habitat_quality_scores.xlsx'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_location_x"
+   ]
   },
   {
    "cell_type": "code",
