Update life stage data, as well as Protection script and a few other minor changes

--- a/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
+++ b/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
@@ -85,13 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ------------------------- Reach-level Life Stages Priority ------------------------------------\n",
     "life_stages_protection = pd.read_excel(updated_spreadsheet, \n",
-    "                   'Life Stage_Scores')"
+    "                   'Life Stage_Scores', skiprows=3)"
    ]
   },
   {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,22 +171,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/Ryan/Documents/GitHub/Prioritization_Step2_Data_Tool/Protection/habitat_quality_scores.xlsx'"
+       "Index(['ReachName', 'Assessment Unit', 'Subbasin', 'Spring.Chinook.Reach',\n",
+       "       'Steelhead.Reach', 'BullTrout.Reach', 'Number of Life Stages- SPCHN',\n",
+       "       'Number of Life Stages- STL', 'Number of Life Stages- BT',\n",
+       "       'AU Rank Sp CHN_Restoration',\n",
+       "       ...\n",
+       "       'Pool Quantity & Quality.3', 'Cover- Boulders.3',\n",
+       "       'Flow- Summer Base Flow.5', 'Temperature- Adult Holding.1',\n",
+       "       'Food- Food Web Resources.1', 'Contaminants.3', 'Harassment.2',\n",
+       "       'HQ Pct.1', 'HQ Pct_CoreMetrics.1', 'HQ Score-ProtectionHolding_BT'],\n",
+       "      dtype='object', length=169)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_location_x"
+    "life_stages_protection"
    ]
   },
   {
