--- a/Restoration_Bull_Trout/RTT_Prioritization_Pathways_and_Actions_Script_Restoration_Bull_Trout.ipynb
+++ b/Restoration_Bull_Trout/RTT_Prioritization_Pathways_and_Actions_Script_Restoration_Bull_Trout.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Script to generate Priority Actions for Bull Trout Restoration Based on Habitat Quality and Limiting Factor Analysis from Step 2 of RTT Prioritization Process\n",
+    "# Script to generate Priority Actions for BULL TROUT Restoration Based on Habitat Quality and Limiting Factor Analysis from Step 2 of RTT Prioritization Process\n",
     "## Author: Ryan Niemeyer, Upper Columbia Salmon Recovery Board\n",
     "### For more information, see https://www.ucsrb.org/prioritization/"
    ]
