Updates Protection script, generated Restoration Pathway output, etc

--- a/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
+++ b/Protection/Export_Step2_MASTER_HabitatAnalysis_PROTECTION_to_invidual_tabs.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,105 +164,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 159</th>\n",
+       "      <th>Unnamed: 160</th>\n",
+       "      <th>Unnamed: 161</th>\n",
+       "      <th>Unnamed: 162</th>\n",
+       "      <th>Unnamed: 163</th>\n",
+       "      <th>Unnamed: 164</th>\n",
+       "      <th>Unnamed: 165</th>\n",
+       "      <th>Unnamed: 166</th>\n",
+       "      <th>Unnamed: 167</th>\n",
+       "      <th>Unnamed: 168</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Filter \"yes\"</td>\n",
+       "      <td>Filter \"yes\"</td>\n",
+       "      <td>Filter \"yes\"</td>\n",
+       "      <td>Filter &gt;3</td>\n",
+       "      <td>Filter &gt;3</td>\n",
+       "      <td>Filter &gt;3</td>\n",
+       "      <td>Filter 1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ReachName</td>\n",
+       "      <td>Assessment Unit</td>\n",
+       "      <td>Subbasin</td>\n",
+       "      <td>Spring.Chinook.Reach</td>\n",
+       "      <td>Steelhead.Reach</td>\n",
+       "      <td>BullTrout.Reach</td>\n",
+       "      <td>Number of Life Stages- SPCHN</td>\n",
+       "      <td>Number of Life Stages- STL</td>\n",
+       "      <td>Number of Life Stages- BT</td>\n",
+       "      <td>AU Rank Sp CHN_Restoration</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pool Quantity &amp; Quality</td>\n",
+       "      <td>Cover- Boulders</td>\n",
+       "      <td>Flow- Summer Base Flow</td>\n",
+       "      <td>Temperature- Adult Holding</td>\n",
+       "      <td>Food- Food Web Resources</td>\n",
+       "      <td>Contaminants</td>\n",
+       "      <td>Harassment</td>\n",
+       "      <td>HQ Pct</td>\n",
+       "      <td>HQ Pct_CoreMetrics</td>\n",
+       "      <td>HQ Score-ProtectionHolding_BT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aeneas Creek 01</td>\n",
+       "      <td>Aeneas Creek Okanogan</td>\n",
+       "      <td>Okanogan</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aeneas Creek 02</td>\n",
+       "      <td>Aeneas Creek Okanogan</td>\n",
+       "      <td>Okanogan</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 169 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['ReachName', 'Assessment Unit', 'Subbasin', 'Spring.Chinook.Reach',\n",
-       "       'Steelhead.Reach', 'BullTrout.Reach',\n",
-       "       'Number of Life Stages- SPCHN', 'Number of Life Stages- STL',\n",
-       "       'Number of Life Stages- BT', 'AU Rank Sp CHN_Restoration',\n",
-       "       'AU Rank STL_Restoration', 'AU Rank BT_Restoration',\n",
-       "       'AU Rank Sp CHN_Protection', 'AU Rank STL_Protection',\n",
-       "       'AU Rank BT_Protection', 'AU Adult Migration Priority- SPCHN',\n",
-       "       'AU Adult Migration Priority- STL',\n",
-       "       'AU Adult Migration Priority- BT', 'Adult Migration Reach? SPCHN',\n",
-       "       'Adult Migration Reach? STL', 'Adult Migration Reach? BT',\n",
-       "       'Flow- Summer Base Flow', 'HQ Percent',\n",
-       "       'Protection_LS_Score_Adult Migration', 'Unnamed: 24',\n",
-       "       'AU Holding Priority- SPCHN', 'AU Holding Priority- STL',\n",
-       "       'AU Holding Priority- BT', 'Holding Reach? SPCHN',\n",
-       "       'Holding Reach? STL', 'Holding Reach? BT', 'Cover- Wood',\n",
-       "       'Cover- Boulders', 'Cover- Undercut Banks',\n",
-       "       'Flow- Summer Base Flow.1', 'Pool Quantity & Quality',\n",
-       "       'Pools- Deep Pools', 'Temperature- Adult Holding', 'Harassment',\n",
-       "       'Predators- Adults', 'HQ Pct', 'HQ Pct_CoreMetrics',\n",
-       "       'HQ Score-ProtectionHolding', 'Unnamed: 43',\n",
-       "       'AU Spawning Priority- SPCHN', 'AU Spawning Priority- STL',\n",
-       "       'AU Spawning Priority- BT', 'Spawning Reach? SPCHN',\n",
-       "       'Spawning Reach? STL', 'Spawning Reach? BT',\n",
-       "       '% Fines/Embeddedness', 'Coarse Substrate',\n",
-       "       'Off-Channel- Side-Channels', 'Flow- Scour',\n",
-       "       'Flow- Summer Base Flow.2', 'Icing', 'Temperature- Adult Spawning',\n",
-       "       'Brook Trout', 'Harassment.1', 'Contaminants', 'Superimposition',\n",
-       "       'HQ_Pct_SPCHN', 'HQ_Pct_STL', 'HQ_Pct_BT', 'HQ_Pct_CoreMetrics',\n",
-       "       'HQ_Pct_CoreMetrics_BT', 'HQ Score_Protection_Spawning',\n",
-       "       'HQ Score_Protection_Spawning_BT', 'Unnamed: 68',\n",
-       "       'AU Fry Priority- SPCHN', 'AU Fry Priority- STL',\n",
-       "       'Fry Reach? SPCHN', 'Fry Reach? STL', 'Cover- Wood.1',\n",
-       "       'Off-Channel- Floodplain', 'Off-Channel- Side-Channels.1',\n",
-       "       'Coarse Substrate.1', 'Entrainment/Stranding', 'HQ_Pct',\n",
-       "       'HQ Score_Protection_Fry', 'Unnamed: 80',\n",
-       "       'AU Natal Rearing Priority- BT', 'Natal Rearing Reach?',\n",
-       "       'Cover- Wood.2', 'Off-Channel- Floodplain.1',\n",
-       "       'Off-Channel- Side-Channels.2', 'Coarse Substrate.2',\n",
-       "       'Cover- Undercut Banks.1', 'Temperature- Rearing', 'Brook Trout.1',\n",
-       "       'HQ_Pct.1', 'HQ_Pct_CoreMetrics.1', 'HQ Score_Protection_Fry_BT',\n",
-       "       'Unnamed: 93', 'AU Summer Rearing Priority- SPCHN',\n",
-       "       'AU Summer Rearing Priority- STL', 'Summer Rearing Reach? SPCHN',\n",
-       "       'Summer Rearing Reach? STL', 'Cover- Wood.3',\n",
-       "       'Cover- Undercut Banks.2', 'Cover- Boulders.1',\n",
-       "       '% Fines/Embeddedness.1', 'Coarse Substrate.3',\n",
-       "       'Pool Quantity & Quality.1', 'Off-Channel- Floodplain.2',\n",
-       "       'Off-Channel- Side-Channels.3', 'Flow- Summer Base Flow.3',\n",
-       "       'Temperature- Rearing.1', 'Contaminants.1',\n",
-       "       'Entrainment/Stranding.1', 'Food- Food Web Resources',\n",
-       "       'Predators- Juveniles', 'HQ_Pct.2', 'HQ_Pct_CoreMetrics.2',\n",
-       "       'HQ Score-Protection-Summer Rearing', 'Unnamed: 115',\n",
-       "       'AU Winter Rearing Priority- SPCHN',\n",
-       "       'AU Winter Rearing Priority- STL', 'Winter Rearing Reach? SPCHN',\n",
-       "       'Winter Rearing Reach? STL', 'Cover- Wood.4', 'Cover- Boulders.2',\n",
-       "       '% Fines/Embeddedness.2', 'Coarse Substrate.4',\n",
-       "       'Off-Channel- Side-Channels.4', 'Flow- Scour.1', 'Icing.1',\n",
-       "       'HQ_Pct.3', 'HQ_Pct_CoreMetrics.3',\n",
-       "       'HQ Score-Protection-Winter Rearing', 'Unnamed: 130',\n",
-       "       'AU Subadult Rearing Priority- BT', 'Subadult Rearing Reach?',\n",
-       "       'Cover- Wood.5', 'Cover- Undercut banks', 'Coarse Substrate.5',\n",
-       "       'Off-Channel- Floodplain.3', 'Off-Channel- Side-Channels.5',\n",
-       "       'Pool Quantity & Quality.2', 'Flow- Summer Base Flow.4',\n",
-       "       'Temperature- Rearing.2', 'Contaminants.2',\n",
-       "       'Predators- Juveniles.1', 'Brook Trout.2', 'HQ_Pct.4',\n",
-       "       'HQ_Pct_CoreMetrics.4', 'HQ Score-Protection-Winter Rearing_BT',\n",
-       "       'Unnamed: 147', 'AU Smolt Priority- SPCHN',\n",
-       "       'AU Smolt Priority- STL', 'Smolt Migration? SPCHN',\n",
-       "       'Smolt Migration Reach? STL', 'Temperature- Rearing.3',\n",
-       "       'Predators- Juveniles.2', 'HQ Score',\n",
-       "       'HQ Score-Protection-Smolt Outmigration', 'Unnamed: 156',\n",
-       "       'AU ANS Priority- BT', 'ANS Reach?', 'Pool Quantity & Quality.3',\n",
-       "       'Cover- Boulders.3', 'Flow- Summer Base Flow.5',\n",
-       "       'Temperature- Adult Holding.1', 'Food- Food Web Resources.1',\n",
-       "       'Contaminants.3', 'Harassment.2', 'HQ Pct.1',\n",
-       "       'HQ Pct_CoreMetrics.1', 'HQ Score-ProtectionHolding_BT'],\n",
-       "      dtype=object)"
+       "        Unnamed: 0             Unnamed: 1 Unnamed: 2            Unnamed: 3  \\\n",
+       "0              NaN                    NaN        NaN                   NaN   \n",
+       "1              NaN                    NaN        NaN          Filter \"yes\"   \n",
+       "2        ReachName        Assessment Unit   Subbasin  Spring.Chinook.Reach   \n",
+       "3  Aeneas Creek 01  Aeneas Creek Okanogan   Okanogan                    no   \n",
+       "4  Aeneas Creek 02  Aeneas Creek Okanogan   Okanogan                    no   \n",
+       "\n",
+       "        Unnamed: 4       Unnamed: 5                    Unnamed: 6  \\\n",
+       "0              NaN              NaN                           NaN   \n",
+       "1     Filter \"yes\"     Filter \"yes\"                     Filter >3   \n",
+       "2  Steelhead.Reach  BullTrout.Reach  Number of Life Stages- SPCHN   \n",
+       "3              yes               no                             0   \n",
+       "4              yes               no                             0   \n",
+       "\n",
+       "                   Unnamed: 7                 Unnamed: 8  \\\n",
+       "0                         NaN                        NaN   \n",
+       "1                   Filter >3                  Filter >3   \n",
+       "2  Number of Life Stages- STL  Number of Life Stages- BT   \n",
+       "3                           6                        NaN   \n",
+       "4                           6                        NaN   \n",
+       "\n",
+       "                   Unnamed: 9  ...             Unnamed: 159     Unnamed: 160  \\\n",
+       "0                         NaN  ...                      NaN              NaN   \n",
+       "1                    Filter 1  ...                      NaN              NaN   \n",
+       "2  AU Rank Sp CHN_Restoration  ...  Pool Quantity & Quality  Cover- Boulders   \n",
+       "3                         NaN  ...                      NaN              NaN   \n",
+       "4                         NaN  ...                      NaN              NaN   \n",
+       "\n",
+       "             Unnamed: 161                Unnamed: 162  \\\n",
+       "0                     NaN                         NaN   \n",
+       "1                     NaN                         NaN   \n",
+       "2  Flow- Summer Base Flow  Temperature- Adult Holding   \n",
+       "3                       1                           1   \n",
+       "4                       1                           1   \n",
+       "\n",
+       "               Unnamed: 163  Unnamed: 164 Unnamed: 165 Unnamed: 166  \\\n",
+       "0                       NaN           NaN          NaN          NaN   \n",
+       "1                       NaN           NaN          NaN          NaN   \n",
+       "2  Food- Food Web Resources  Contaminants   Harassment       HQ Pct   \n",
+       "3                         5             5            5          NaN   \n",
+       "4                         5             5            5          NaN   \n",
+       "\n",
+       "         Unnamed: 167                   Unnamed: 168  \n",
+       "0                 NaN                            NaN  \n",
+       "1                 NaN                            NaN  \n",
+       "2  HQ Pct_CoreMetrics  HQ Score-ProtectionHolding_BT  \n",
+       "3                 NaN                            NaN  \n",
+       "4                 NaN                            NaN  \n",
+       "\n",
+       "[5 rows x 169 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "life_stages_protection.columns.values"
+    "life_stages_protection.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
