--- a/Restoration_Bull_Trout/RTT_Prioritization_Pathways_and_Actions_Script_Restoration_Bull_Trout.ipynb
+++ b/Restoration_Bull_Trout/RTT_Prioritization_Pathways_and_Actions_Script_Restoration_Bull_Trout.ipynb
@@ -725,21 +725,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ------------------------------------- Habitat Quality Scores -----------------------\n",
     "#habitat_quality_scores = pd.read_excel('Y:/UCRTT/Prioritization/Step 2/Habitat Evaluation/MASTER_Step2_HabitatAnalysis.xlsx', \n",
     "#                   'HabitatQuality_Scores')\n",
-    "github_input_x = 'https://github.com/Upper-Columbia-Salmon-Recovery-Board/Prioritization_Step2_Data_Tool/blob/master/habitat_quality_scores.xlsx?raw=true'\n",
+    "github_input_x = 'C:/Users/Ryan/Documents/GitHub/Prioritization_Step2_Data_Tool/Protection/habitat_quality_scores.xlsx'\n",
     "habitat_quality_scores = pd.read_excel(github_input_x)\n",
     "# NOTE:  Eight Mile Creek 04 missing for some reason"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
