Updates to Protection and Bull Trout Restoration pathways, also updated habitat attribute scores excel

--- a/Protection/RTT_Prioritization_PROTECTION_Pathways_Script.ipynb
+++ b/Protection/RTT_Prioritization_PROTECTION_Pathways_Script.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,13 +366,12 @@
     "} \n",
     "\n",
     "\n",
-    "\n",
     "# create a dataframe \n",
     "AU_Rank_vars = pd.DataFrame(AU_Rank_vars, columns = ['data_frame', 'variable']) \n",
     "\n",
     "AU_Rank_vars2 = { \n",
-    " 'data_frame': ['habitat_quality_scores', 'habitat_quality_scores'  ], \n",
-    " 'variable': ['AU Tier Spring CHN' , 'AU Tier Steelhead'] \n",
+    " 'data_frame': ['habitat_quality_scores', 'habitat_quality_scores',  'habitat_quality_scores'  ], \n",
+    " 'variable': ['AU Tier Spring CHN' , 'AU Tier Steelhead', 'AU Rank BT_Restoration'] \n",
     "} \n",
     "# create a dataframe \n",
     "AU_Rank_vars2 = pd.DataFrame(AU_Rank_vars2, columns = ['data_frame', 'variable']) \n",
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,13 +588,6 @@
     "life_stages_protection_data_frame = life_stages_protection[3:life_stages_protection.shape[0]]\n",
     "life_stages_protection_data_frame.columns = life_stages_protection[2:3].values.tolist()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1035,20 +1027,6 @@
    "source": [
     "### ----------------- Filter out to only have Bull Trout reaches ----------------- "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
